jupyter/jupyter-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: jupyterlab
spec:
  replicas: 1
  selector:
    app: jupyterlab
  template:
    metadata:
      labels:
        app: jupyterlab
    spec:
      containers:
      - name: jupyterlab
        image: jupyter/base-notebook:816fcb7354c1
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: airflow-dags
          mountPath: /opt/airflow/dags
      volumes:
      - name: airflow-dags
        persistentVolumeClaim:
          claimName: dag-pvc
      restartPolicy: Always
